# AuraFrameFx-Alpha

./: .gitignore  IP_PROTECTION.md  LICENSE  README.md  TOC.md  TRINITY_READY.md  TRINITY_SYSTEM_STATUS.md  build-with-java17.bat  build-with-java24.bat  build.gradle.kts  detekt-config.yaml  gradle.properties  local.properties  openapi.yml  sdkman_installer.sh  settings.gradle.kts  simple-build.gradle  test.kt
.github/: dependabot.yml
.github/workflows/: main.yml  manual.yml
app/: build.gradle.kts
app/ai_backend/: Makefile.test_conftest  README_tests.md  conftest.py  genesis_api.py  genesis_connector.py  genesis_consciousness_matrix.py  genesis_core.py  genesis_ethical_governor.py  genesis_evolutionary_conduit.py  genesis_profile.py  pytest.ini  pytest_test_conftest.ini  requirements.txt  run_test_conftest_suite.py  start_genesis.sh  test-requirements.txt  test_config.py  test_conftest.py  test_conftest_comprehensive.py  test_conftest_performance.py  test_genesis_api.py  test_genesis_connector.py  test_genesis_connector_benchmarks.py  test_genesis_connector_integration.py  test_genesis_connector_property.py  test_genesis_connector_smoke.py  test_genesis_consciousness_matrix.py  test_genesis_consciousness_matrix.py.backup  test_genesis_consciousness_matrix_async.py  test_genesis_consciousness_matrix_integration.py  test_genesis_core.py  test_genesis_ethical_governor.py  test_genesis_evolutionary_conduit.py  test_genesis_evolutionary_conduit_extended.py  test_genesis_profile.py  test_start_genesis.py  test_test_conftest.py  test_workflow_main_yml.py
app/ai_backend/ai_backend/: genesis_evolutionary_conduit.py  test_genesis_connector.py  test_genesis_consciousness_matrix.py  test_genesis_evolutionary_conduit.py  test_genesis_profile.py
app/src/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp  native-lib.cpp
app/src/main/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp  language_id_l2c_jni_test.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties  gradle.properties
jvm-test/: build.gradle.kts
sandbox-ui/: build.gradle.kts
(+205 files in other folders)
